[gd_scene load_steps=9 format=3 uid="uid://bclb7sha5apm6"]

[ext_resource type="StyleBox" uid="uid://da4t1xyqp4ygo" path="res://style_box/container_background.tres" id="1_1q7bv"]
[ext_resource type="Script" uid="uid://dod6bnea2m2gl" path="res://gameplay_components/selection_container.gd" id="2_ptbgw"]
[ext_resource type="LabelSettings" uid="uid://b02jthouq57m8" path="res://label_settings/index_label.tres" id="3_vt86r"]
[ext_resource type="LabelSettings" uid="uid://bbvs0m1e4ai2a" path="res://label_settings/title_label.tres" id="4_2hswk"]
[ext_resource type="StyleBox" uid="uid://b4x1bdscqy1j4" path="res://style_box/main_play_bh.tres" id="5_r68ol"]
[ext_resource type="StyleBox" uid="uid://btecjxjkodd4d" path="res://style_box/main_play-bn.tres" id="6_fsoeo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7mycd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_272bh"]

[node name="SelectionContainer" type="PanelContainer"]
theme_override_styles/panel = ExtResource("1_1q7bv")
script = ExtResource("2_ptbgw")
title = &"Fruit Slash"
index = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IndexLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "#1"
label_settings = ExtResource("3_vt86r")
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
text = "Game Title"
label_settings = ExtResource("4_2hswk")
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_7mycd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_272bh")
theme_override_styles/hover = ExtResource("5_r68ol")
theme_override_styles/pressed = ExtResource("5_r68ol")
theme_override_styles/normal = ExtResource("6_fsoeo")
text = "Play"

[connection signal="pressed" from="MarginContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
